cards populate and are visible- details bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -322,7 +322,10 @@ flex-direction: row;
 justify-content: center;
 margin: 20px;
 font-size: 12px;
+}
 
+.card-reveal span, .card-reveal i {
+  color: black;
 }
 
 /* flex */
